--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
     <title>Phaser 3 Tilemap Template</title>
 
@@ -12,6 +14,12 @@
 
     <!-- Import an run main.js : load the game config and start first scene -->
     <script type="module" src="./main.js"></script>
+
+    <style>
+      body {
+        font-family: 'Press Start 2P', monospace;
+      }
+    </style>
   </head>
   <body></body>
 </html>
